refactor: added latest live changes

--- a/style.css
+++ b/style.css
@@ -8,16 +8,31 @@ Template: creator
 Text Domain: creator
 */
 
-:root{
-	--color-primary-button: #b79c7d;
-}
-
 .eltd-logo-area {
 	height: 100px !important;
 }
 
-button,
-[role=button],
-.elementor-button {
-	background-color: var(--color-primary-button) !important;
+
+/* newsletter signup */
+
+.newsletter-signup__container {
+	display: flex;
+}
+
+.newsletter-signup__email {
+	width: 70%;
+}
+
+.newsletter-signup__submit {
+	width: 30%;
+}
+
+.newsletter-signup__email,
+.newsletter-signup__submit {
+	margin: 0;
+}
+
+/* remove transition for objects with the class 'parallax' */
+.parallax {
+    transition: none !important;
 }
