--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,5 +1,5 @@
-@import 'helpers/media-queries';
+@import 'base/media-queries';
+@import 'base/colors';
 
-@import 'base/layout';
-
-@import 'parts/footer';
+@import 'layout/body';
+@import 'layout/footer';
