--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,5 +1,6 @@
 @import 'base/media-queries';
 @import 'base/colors';
+@import 'base/typography';
 
 @import 'layout/body';
 @import 'layout/header';
