--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -15,7 +15,13 @@ $footer-color-text--hover: #96664d;
   @include breakpoint-up(md) {
     display: flex;
     flex-direction: row;
+    flex-flow: wrap;
+    justify-content: center;
   }
+}
+
+.footer__menu .menu-item {
+  margin: 0 10px;
 }
 
 .footer__menu .menu-item a {
@@ -36,11 +42,19 @@ $footer-color-text--hover: #96664d;
 
 .newsletter-signup__email {
   width: 70%;
+
+  input {
+    background: none;
+  }
 }
 
 input.newsletter-signup__submit {
   width: 30%;
   padding-top: 16px !important;
+
+  &:hover {
+    border-color: #a27d53;
+  }
 }
 
 .newsletter-signup__email,
@@ -52,13 +66,15 @@ input.newsletter-signup__submit {
 .newsletter-signup__email input,
 input.newsletter-signup__submit {
   height: 45px;
+  border: 1px solid $footer-color-text;
 }
 
 footer .widget_eltd_social_icon_widget {
   margin-top: 25px;
 
   i {
-    font-size: 1.7em;
+    font-size: 1.4em;
+    margin: 8px;
   }
 
   i:hover {
@@ -67,6 +83,6 @@ footer .widget_eltd_social_icon_widget {
 }
 
 // bottom footer
-.eltd-footer-bottom-holder {
+footer .eltd-footer-bottom-holder {
   background-color: none;
 }
