--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -10,7 +10,7 @@ header .eltd-menu-area {
 }
 
 .header--fixed {
-  position: fixed;
+  position: absolute;
   top: 0;
   z-index: 101;
   width: 100%;
