feature(header): link to home on logo click

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -38,6 +38,10 @@ header .eltd-menu-area {
 .header__logo {
   width: 175px;
 
+  a {
+    display: block;
+  }
+
   img {
     max-width: 100%;
   }
