--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,7 +1,6 @@
-$footer-color-text: var(--footer-text-color);
-$footer-color-text--hover: #96664d;
-
 footer {
+  --footer-text-color--hover: #96664d;
+
   background: var(--footer-bg-color);
 }
 
@@ -34,10 +33,10 @@ footer *:not(i) {
 }
 
 .footer__menu .menu-item a {
-  color: $footer-color-text;
+  color: var(--footer-text-color);
 
   &:hover {
-    color: $footer-color-text--hover;
+    color: var(--footer-text-color--hover);
   }
 }
 
@@ -51,7 +50,7 @@ footer *:not(i) {
   }
 
   .eltd-footer-widget-title {
-    color: $footer-color-text !important;
+    color: var(--footer-text-color) !important;
     font-size: 1.5em;
   }
 }
@@ -88,7 +87,7 @@ input.newsletter-signup__submit {
 .newsletter-signup__email input,
 input.newsletter-signup__submit {
   height: 45px;
-  border: 1px solid $footer-color-text !important;
+  border: 1px solid var(--footer-text-color) !important;
 }
 
 footer .widget_eltd_social_icon_widget {
@@ -101,12 +100,12 @@ footer .widget_eltd_social_icon_widget {
 
   a:hover i,
   i:hover {
-    color: $footer-color-text--hover;
+    color: var(--footer-text-color--hover);
   }
 }
 
 footer .textwidget {
-  color: $footer-color-text;
+  color: var(--footer-text-color);
 }
 
 // bottom footer
