--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -6,7 +6,7 @@ header nav {
 
 // TODO refactor
 *:not(i):not(.fa) {
-  font-family: 'Abel', Abel !important;
+  font-family: 'Abel', Abel;
 }
 
 body {
