--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -14,3 +14,11 @@ body,
 body {
   font-size: 16px !important;
 }
+
+h2 {
+  font-size: 2em;
+
+  @include breakpoint-up(md) {
+    font-size: 2.5em;
+  }
+}
