feature(header): added customizer config for logo width

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -45,7 +45,7 @@ header .eltd-menu-area {
 }
 
 .header__logo {
-  width: 175px;
+  width: var(--header-logo-width, 150px);
 
   a {
     display: block;
