feat(footer): added top border

--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 footer {
   --footer-text-color--hover: #96664d;
-
   background: var(--footer-bg-color);
+  border-top: 1px solid #B79C7D;
 }
 
 //TODO quick fix for now
