added cart and account to mobile navigation

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -101,7 +101,8 @@ header .eltd-menu-area {
 
 // sticky header
 
-.header__sticky-container .eltd-position-right {
+.header__sticky-container .eltd-position-right,
+.header__mobile-container .eltd-position-right {
   margin-right: 25px;
 
   &:before {
