--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -2,6 +2,8 @@
 @import 'base/colors';
 @import 'base/typography';
 
+@import 'elements/input';
+
 @import 'layout/body';
 @import 'layout/header';
 @import 'layout/footer';
